overflow fix

--- a/assets/findify-product-swatches.css
+++ b/assets/findify-product-swatches.css
@@ -147,7 +147,6 @@
   display: flex;
   align-items: center;
   max-width: 100%;
-  overflow: hidden;
 }
 
 .findify-color-swatches-inner[data-disabled="true"] .findify-next-swatch,
